// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> changes styles with fluid prop 1`] = `
.emotion-0 {
  padding: 0 1rem;
  margin: 0 auto;
  max-width: 100%;
}

<Container
  fluid={true}
>
  <div
    className="emotion-0"
  />
</Container>
`;

exports[`<Container /> matches snapshot 1`] = `
.emotion-0 {
  padding: 0 1rem;
  margin: 0 auto;
  max-width: 1172px;
}

<Container>
  <div
    className="emotion-0"
  />
</Container>
`;
